[package]
name = "jwrs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.14.0", features = ["full"] }
serde = { version = "1.0.130", features = ["derive"] }
serde_json = { version="1.0.72" }
tokio-tungstenite = "0.16.1"
futures-channel = "0.3.18"
futures-util = "0.3.17"
anyhow = "1.0.45"
tracing = "0.1.29"